	     return type differs and is not covariant from 'TCPSegment_Base::dup'
	  Fix: change dup()'s return type to the real class.

	- several internal classes got removed/reorganized

	- cPar: new method stdstringValue() / operator std::string: this must be used with "volatile string" params

	- cPacket removed

	- cStringTokenizer: added asIntVector() and asDoubleVector() methods; TODO testing

	Configuration handling rewritten, including cConfiguration.

	Run number handling:
	- run numbers made entrirely the matter of cEnvir. cSimulation::runNumber()
	  got removed. Also removed runNumber from the arg list of cEnvir callback
	  functions.

	Removed several obsolete functions:
	- calls to myxxx() functions should be replaced with opp_xxx() in the code:
		myrandomize(...)
		genk_myrandomize(...)
		mystrdup(...)
		mystrcpy(...)
		mystrcmp(...)
		mystrmatch(...)
		fastconcat(...)
		indexedname(...)
	- calls to genk_xxx() functions should be replaced with their "genk_"-less
	  counterparts  (and the first arg dropped or moved to the last place):
		genk_uniform(double gen_nr, double a, double b);
		genk_intuniform(double gen_nr, double a, double b);
		genk_exponential(double gen_nr, double p);
		genk_normal(double gen_nr, double mean, double variance);
		genk_truncnormal(double gen_nr, double mean, double variance);
	- other:
	        correct(const char *) got renamed to opp_nulltoempty(const char *)

	cMessage changes:
	- length changed from long to int64 (reason: message length was limited
	  to 2 gigabits or 256 megabytes on 32-bit architectures).
	  Affected functions:
		setLength() / setByteLength() / addLength() / addByteLength()
                length() / byteLength()
	- message kind and priority changed from int to short. Affected functions:
		kind() / setKind()
		priority() / setPriority()
	- added some extra fields required by sequence chart drawing: cause event
	  number, message id, message tree id, etc.

	Statistics classes: